index.html file completion 🚀

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <!--links to the google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <!--end of links to google fonts-->
 </head>
 
@@ -19,7 +20,7 @@
             <h2 class="heading-word">WEIGHT TRACKER APP</h2>
         </header>
         <div class="content-area">
-            <div class="top-part>
+            <div class="top-part">
                 <div class=" image-section ">
                     <svg id="f6ab8ba1-7e68-4bec-bb42-3789208a6270 " data-name="Layer 1 " xmlns="http://www.w3.org/2000/svg " width="1080 " height="589.33892 " viewBox="0 0 1080 589.33892 "><title>gym session</title><path d="M1140,707.81053c0-32.1668-16.3221-58.24316-36.45652-58.24316-12.655,0-23.8005,10.30531-30.33731,25.94558a18.28713,18.28713,0,0,0-6.967-1.398c-6.09437,0-11.72912,3.12278-16.32427,8.40786-5.89246-19.501-18.38734-32.95544-32.84964-32.95544-13.52217,0-25.316,11.77071-31.60967,29.23968a19.91524,19.91524,0,0,0-12.47729-4.6921C957.52634,674.115,945,694.127,945,718.81316a65.14473,65.14473,0,0,0,4.40793,24.06827h183.23972C1137.261,733.12519,1140,720.98025,1140,707.81053Z
                 " transform="translate(-60 -155.33054) " fill="#eb322e "/><path d="M1009.299,371.48173c-28.71033-62.10748-84.89587-115.09021-152.77118-123.72558-17.94635-2.28321-36.68378-1.3675-53.33478,5.70556-21.857,9.28455-37.96508,28.02509-54.24615,45.31275A654.10822,654.10822,0,0,1,633.987,395.62193c-20.687,13.696-42.876,26.47455-67.43726,29.97882-49.2453,7.02606-97.95556-26.55633-120.41418-70.94189-14.02936-27.7265-20.51245-60.27961-31.85358-89.119-13.0614-.025-28.62286-.0202-45.36487.05694-46.27673.21332-83.94415.897-83.94415.897s44.77362-59.30725,83.77625-37.33435c12.46411,7.02191,25.51886,13.28808,37.51635,18.56665-6.81579-13.11078-15.41308-24.90729-27.24035-34.39191-23.32129-18.7019-54.90741-23.94775-84.7688-22.555-31.35675,1.46252-63.00171,9.8576-88.48157,28.19232-45.39062,32.662-64.135,90.15283-80.17773,143.72284l38.77752,19.43982c16.63312-14.38,40.95581-28.6048,63.37458-15.97473,39.00256,21.973,83.80658,36.562,83.80658,36.562s-37.36194-.33789-83.63868-.12464c-7.77227.03583-15.29242.08515-22.44134.142L636,618.56737c142,2,249.06818-5.67914,384,0,7.03717.29614,22.86554-36.592,22.91827-46.29987C1043.29016,503.84611,1038.00934,433.58922,1009.299,371.48173Zm-137.88184,18.615c-46.27673.21332-83.94415.897-83.94415.897s44.77362-59.30725,83.77625-37.33435,83.80658,36.562,83.80658,36.562S917.69385,389.88353,871.41711,390.09678Z
@@ -54,13 +55,35 @@
                 " ry="19.04805 " fill="#2f2e41 "/><rect x="770.47483 " y="442.88249 " width="54.76315 " height="6.34935 " fill="#2f2e41 "/><ellipse cx="825.23799 " cy="446.05716 " rx="4.76201 " ry="19.04805 " fill="#2f2e41 "/><ellipse cx="770.47483 " cy="446.05716
                 " rx="4.76201 " ry="19.04805 " fill="#2f2e41 "/><path d="M254,593.06737c0-23.38843-14.48063-42.34852-32.34348-42.34852-11.22724,0-21.11532,7.493-26.91464,18.865a19.36184,19.36184,0,0,0-6.181-1.01647,21.05874,21.05874,0,0,0-14.48256,6.11334c-5.22767-14.17914-16.31287-23.96186-29.14353-23.96186-11.99658,0-22.45981,8.55848-28.04345,21.26014a20.10673,20.10673,0,0,0-11.06959-3.41162c-13.70863,0-24.82174,14.55072-24.82174,32.5a39.92792,39.92792,0,0,0,3.91062,17.5H247.47715A51.20123,51.20123,0,0,0,254,593.06737Z
                 " transform="translate(-60 -155.33054) " fill="#eb322e " opacity="0.3 "/></svg>
+                </div>
+                <div class="quotes ">
+                    <p>"Make time for it. Just get it done. Noboyd ever gets got strong or got in shape by thinking about it. They did it "</p>
+                </div>
             </div>
-            <div class="quotes ">
-                <p>"Make time for it. Just get it done. Noboyd ever gets got strong or got in shape by thinking about it. They did it "</p>
+            <div id="form-section ">
+                <form action="@mailto:adedokunoluwaferanmi@gmail.com" method="POST">
+                    <div class="form-parts name-form">
+                        <img src="./img/name-icon.png" <label for="name">Name:</label fo>
+                        <input type="text" name="name">
+                    </div>
+                    <div class="form-parts weight-form">
+                        <img src="./img/weight-icon.png">
+                        <label for="weight">Weight: </label>
+                        <input type="number" name="weight" class=" ">
+                    </div>
+                    <div class="form-parts height-form">
+                        <img src="./img/height-icon.png">
+                        <label for="height">Height: </label>
+                        <input type="number" name="height" class=" ">
+                    </div>
+                    <div class="form-button ">
+                        <button type="submit">Track IT </button>
+                    </div>
+                </form>
             </div>
         </div>
-        </divs>
-        <script src=" "></script>
+    </div>
+    <script src=" "></script>
 </body>
 
 </html>
