add-up to index.html

--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
                 <form action="@mailto:adedokunoluwaferanmi@gmail.com" method="POST">
                     <div class="form-parts name-form">
                         <img src="./img/name-icon.png" <label for="name">Name:</label fo>
-                        <input type="text" name="name">
+                        <input type="text" name="name" placeholder="Enter your name">
                     </div>
                     <div class="form-parts weight-form">
                         <img src="./img/weight-icon.png">
                         <label for="weight">Weight: </label>
-                        <input type="number" name="weight" class=" ">
+                        <input type="number" name="weight" placeholder="Input Weight">
                     </div>
                     <div class="form-parts height-form">
                         <img src="./img/height-icon.png">
                         <label for="height">Height: </label>
-                        <input type="number" name="height" class=" ">
+                        <input type="number" name="height" placeholder="Input height">
                     </div>
                     <div class="form-button ">
                         <button type="submit">Track IT </button>
@@ -85,5 +85,6 @@
     </div>
     <script src=" "></script>
 </body>
+
 
 </html>
