(update): index.html added files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Weight Tracker App</title>
     <!--the css style code-->
     <link rel="stylesheet" href="./css/styles.css">
     <!--links to the google fonts-->
@@ -61,11 +61,12 @@
                 </div>
             </div>
             <div id="form-section ">
-                <form action="@mailto:adedokunoluwaferanmi@gmail.com" method="POST">
+                <form action="" method="POST">
                     <div class="form-parts name-form">
                         <img src="./img/name-icon.png" <label for="name">Name:</label fo>
                         <input type="text" name="name" placeholder="Enter your name">
                     </div>
+
                     <div class="form-parts weight-form">
                         <img src="./img/weight-icon.png">
                         <label for="weight">Weight: </label>
@@ -80,6 +81,7 @@
                         <button type="submit">Track IT </button>
                     </div>
                 </form>
+
             </div>
         </div>
     </div>
