--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
                 " transform="translate(-60 -155.33054) " fill="#eb322e " opacity="0.3 "/></svg>
                 </div>
                 <div class="quotes ">
-                    <p>"Make time for it. Just get it done. Noboyd ever gets got strong or got in shape by thinking about it. They did it "</p>
+                    <p>"Make time for it. Just get it done. Nobody ever gets got strong or got in shape by thinking about it. They did it "</p>
                 </div>
             </div>
             <div id="form-section ">
                 <form action="" method="POST">
                     <div class="form-parts name-form">
-                        <img src="./img/name-icon.png" <label for="name">Name:</label fo>
+                        <img src="./img/name-icon.png">
+                        <label for="name">Name:</label>
                         <input type="text" name="name" placeholder="Enter your name">
                     </div>
 
@@ -81,7 +82,9 @@
                         <button type="submit">Track IT </button>
                     </div>
                 </form>
-
+            </div>
+            <div id="output">
+                <p>Difference:</p>
             </div>
         </div>
     </div>
