just some minor fixes and updates

--- a/index.html
+++ b/index.html
@@ -22,34 +22,34 @@
         <div class="content-area">
             <div class="top-part">
                 <div class=" image-section">
-                    <a href="img/weight-tracking.svg"></a>
+                    <img src="img/weight-tracking.svg"></a>
                 </div>
                 <div class="quotes ">
                     <p>"Make time for it. Just get it done. Nobody ever gets got strong or got in shape by thinking about it. They did it "</p>
                 </div>
             </div>
             <form id="form-content">
-                    <img src="./img/name-icon.png">
-                    <label for="name">Name:</label>
-                    <input type="text" name="name" placeholder="Enter your name........" id="name-form">
+                <label for="name">Name:</label>
+                <input type="text" name="name" placeholder="Enter your name........" id="name-form">
 
-                    <img src="./img/weight-icon.png">
-                    <label for="weight">Weight: </label>
-                    <input type="number" id="weight-form"  placeholder="Input your Weight........" value="">
+                <label for="weight">Weight: </label>
+                <input type="number" id="weight-form" placeholder="Input your Weight........" value="">
 
-                    <label for="height">Height: </label>
-                    <input type="number"  id="height-form" placeholder="Input your height........." value="">
+                <label for="height">Height: </label>
+                <input type="number" id="height-form" placeholder="Input your height........." value="">
 
-                    <button type="submit" id="form-button">Check</button>
+                <button type="submit" id="form-button">Check</button>
             </form>
         </div>
-        <div id="output">
-            <table id="output-area">
-           
-            </table>
-        </div>
+        <table>
+            <tr class="heading-table">
+                <th class="weight-table">Weight (KG)</th>
+                <th class="height-table">Height (FT)</th>
+            </tr>
+            <tbody id="output-area"></tbody>
+        </table>
     </div>
-    </div>
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js "></script>
 </body>
+
 </html>
