minor update and fixes

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </header>
         <div class="content-area">
             <div class="top-part">
-                <div class=" image-section">
-                    <img src="img/weight-tracking.svg"></a>
+                <div class="image-section">
+                    <img src="img/weight-tracking.svg" alt="Image showing a male and female exercising"></a>
                 </div>
                 <div class="quotes ">
-                    <p>"Make time for it. Just get it done. Nobody ever gets got strong or got in shape by thinking about it. They did it "</p>
+                    <p>"Make time for it, Just get it done. Nobody ever gets got strong or got in shape by thinking about it. They did it "</p>
                 </div>
             </div>
             <form id="form-content">
